site/index.css
* {
    margin: 0;
    padding: 0;
}

body {
    background-color: #111111;
    color: #DDDDDD;
    font-family: monospace;
    font-size: 1.15rem;
    height: 100%;
    width: 100%;
}

main {
    display: flex;
    flex-direction: column;
    max-width: 80ch;
    padding: 2em 0 2em;
    margin: 0 auto 0;
}

h2 {
    margin-top: 0.5em;
}

p {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

a {
    text-decoration: none;
}

a:hover, a:active, a:focus {
    text-decoration: underline;
}

a:link {
    color: #7EB6E1;
}

a:visited {
    color: #5075BF;
}

code {
    background-color: #333333;
    padding: 1px;
    border-radius: 3px;
}

pre > code {
    display: block;
    margin: 0.5em auto 0.5em;
}

ul {
    list-style-position: inside;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

li {
    margin-left: 1.5em;
}

li:not(:last-child) {
    margin-bottom: 0.5em;
}

#logo-and-name-and-shit {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.webring-member {
    display: inline-flex;
    flex-direction: row;
    align-items: center;
}

.webring-status {
    margin-right: 0.5em;
}

.webring-member > a {
    display: grid;
}

.config-image {
    margin-left: 0.25em;
    max-height: 1.25em;
}

hr {
    width: 75%;
    align-self: center;
    margin: 1em auto 1em;
}

